wrap story form inputs in a container to fix margin bug

--- a/app/assets/stylesheets/story_form.scss
+++ b/app/assets/stylesheets/story_form.scss
@@ -31,11 +31,14 @@
   margin-top: 5px;
 }
 
-.stories-form-input {
-  display: block;
-  margin: 0 auto !important;
+.stories-form-input-container {
+  margin: 0 auto;
   max-width: 700px;
   width: calc(100% - 40px);
+}
+
+.stories-form-input {
+  display: block;
 }
 
 .stories-form-input-title {
